@@ -24,6 +24,7 @@
 
 #include "../include/i18n.h"
 
+#include <gtkmm/label.h>
 #include <glibmm/ustring.h>
 #include <gdkmm/colormap.h>
 
@@ -37,9 +38,9 @@
 
 namespace GParted
 {
-	
 typedef long long Sector;//one day this won't be sufficient,  oh how i dream of that day... :-P
 
+//------------global used convenience functions----------------------------	
 inline long Sector_To_MB( Sector sectors ) 
 {
 	 return (long) ( (double) sectors * 512/1024/1024 +0.5) ;
@@ -54,6 +55,23 @@ inline Sector Abs( Sector sectors )
 {
 	return sectors < 0 ? sectors - 2*sectors : sectors ;
 }
+
+inline Gtk::Label * mk_label( const Glib::ustring & text ) 
+{
+	Gtk::Label * label = manage( new Gtk::Label() ) ;
+	label ->set_markup( text ) ;
+	label ->set_alignment( Gtk::ALIGN_LEFT ) ;
+	return label ;
+}
+
+inline Glib::ustring num_to_str( Sector number )
+{
+	std::ostringstream os;
+	os .imbue(std::locale(""));
+	os << number ;
+	return os .str() ;
+}
+//----------------------------------------------------------------------------------------------
 	
 	
 enum PartitionType {
